[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ciencia_computacao.gd" type="Script" id=1]
[ext_resource path="res://PixelIntv-OPxd.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/TimerCC.gd" type="Script" id=4]
[ext_resource path="res://decorations/PixelIntv-OPxd.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 353.0
margin_top = 180.0
margin_right = 495.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Button"]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 140.0
margin_bottom = 50.0
color = Color( 0.0117647, 0.356863, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
margin_left = 23.0
margin_top = 10.0
margin_right = 77.0
margin_bottom = 41.0
text = "alimento = 100
humanos = 500"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 274.0
margin_top = 88.0
margin_right = 512.0
margin_bottom = 122.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Button2"]
visible = false
margin_left = 3.0
margin_top = 2.0
margin_right = 236.0
margin_bottom = 31.0
color = Color( 0.0117647, 0.356863, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button2"]
margin_left = 13.0
margin_top = 10.0
margin_right = 222.0
margin_bottom = 41.0
text = "resultado = alimento  / humanos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 236.0
margin_top = 299.0
margin_right = 370.0
margin_bottom = 333.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Button3"]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 132.0
margin_bottom = 32.0
color = Color( 0.0117647, 0.356863, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button3"]
margin_left = 18.0
margin_top = 10.0
margin_right = 120.0
margin_bottom = 41.0
text = "print (resultado)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 503.0
margin_top = 295.0
margin_right = 641.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Button4"]
visible = false
margin_left = 3.0
margin_top = 2.0
margin_right = 135.0
margin_bottom = 43.0
color = Color( 0.972549, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button4"]
margin_left = 18.0
margin_top = 9.0
margin_right = 122.0
margin_bottom = 40.0
text = "alimentos = 500
humanos = 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
margin_left = 593.0
margin_top = 194.0
margin_right = 757.0
margin_bottom = 228.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Button5"]
visible = false
margin_left = 3.0
margin_top = 2.0
margin_right = 160.0
margin_bottom = 31.0
color = Color( 0.972549, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button5"]
margin_left = 12.0
margin_top = 9.0
margin_right = 152.0
margin_bottom = 40.0
text = "resultado is 100 / 500
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 131.0
margin_top = 185.0
margin_right = 267.0
margin_bottom = 219.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Button6"]
visible = false
margin_left = 3.0
margin_top = 2.0
margin_right = 135.0
margin_bottom = 32.0
color = Color( 0.972549, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button6"]
margin_left = 12.0
margin_top = 8.0
margin_right = 126.0
margin_bottom = 39.0
text = "print (\"resultado\")"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="."]
margin_left = 827.0
margin_top = 408.0
margin_right = 955.0
margin_bottom = 468.0
custom_fonts/font = SubResource( 1 )
text = "Sair"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
margin_left = 904.0
margin_top = 18.0
margin_right = 945.0
margin_bottom = 39.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "03:00"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Time"]

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
[connection signal="timeout" from="Time/Timer" to="Time" method="_on_Timer_timeout"]
